# git-sense

./: .env-example  .gitignore  README.md  config.json  config.yaml  pyproject.toml  setup.py
gitsense/: .env-example  __main__.py  config.yaml
gitsense/features/: branch_namer.py  commit.py  config.py  llm_provider.py
gitsense/features/core/: config.py  git_utils.py  llm_provider.py
