[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "GitSense"
version = "0.1.0"
authors = [
    {name = "Vinish Reddy Kamireddy", email = "vinishreddy.k@gmail.com"},
]
description = "A CLI/desktop tool that uses AI to automate and enhance common Git workflows, making version control smarter and more intuitive."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Version Control :: Git",
    "Environment :: Console",
]
keywords = ["git", "ai", "llm", "productivity", "developer-tools"]
dependencies = [
    "python-dotenv",
    "google-generativeai",
    "pyyaml",
    "urllib3<2.0; python_version < '3.10'",
]

[project.urls]
Homepage = "https://github.com/VinishReddyK/git-sense"

[tool.setuptools]
packages = ["gitsense", "gitsense.features", "gitsense.features.core"]

[tool.setuptools.package-data]
gitsense = [
    "config.yaml",
    ".env",
]

[project.scripts]
gitsense = "gitsense.__main__:main"